src/app/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body, html {
  overflow-x: hidden;
}


body {
  font-family: "Libre Baskerville", serif;
  font-size: 16px;
  line-height: 1.6;
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 15px;
  font-weight: bold;
}

p {
  margin-bottom: 15px;
}

a {
  color: inherit;
  text-decoration: none;
  transition: color var(--transition-time);
}

a:hover {
  color: #0071ff;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.app {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero {
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: url("../../public/pizza.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

.title {
  font-size: 2rem;
  color: #ffffff;
  text-align: center;
  margin-top: 20px;
  margin-bottom: 20px;
}

.about {
  padding: 1rem;
  background-color: #ffffff;
  color: black;
  text-shadow: 2px 2px 4px rgba(232, 224, 224, 0.7);
  border: 1px solid rgba(232, 224, 224, 0.7);
  border-radius: 10px;
}

.about__container {
  display: flex;
}

.about__li {
  padding: 0.75rem;
  list-style: none;
  margin: 2rem;
  background-color: rgba(0, 0, 0, 0.05);
  border-radius: 10px;
}

.menu {
  width: 100%;
}

.menu__container {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.menu__background {
  background-image: url("../../public/aurelien-lemasson-theobald-x00CzBt4Dfk-unsplash.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  background-position-x: center;
  border-radius: 10px;
}

.menu__content {
  background-color: rgba(0, 0, 0, 0.1);
  padding: 1rem;
  margin: 0rem 1rem;
  border-radius: 10px;
  border-radius: 10px;
  color: #ffffff;
}

.history {
  margin: 0.5rem;
  background-color: #060606;
  color: #252323;
  text-shadow: none;
  height: 100vh;
  width: 100vw;
  color: #ffffff;
}

.history__container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 100%;
  height: 100vh;
}

.history__container div {
  padding: 1rem 1rem;
}

.history__content {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.history__container p {
  flex: 1;
  box-sizing: border-box;
}

.history__image {
  height: 95%;
  width: 100%;
  background-image: url("../../public/fineas-anton-kC1-9Snr9hI-unsplash.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 10px;
}

.visit__container {
  margin: 1.25rem;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-size: contain;
  background-repeat: no-repeat;
  width: 100vw;
  height: 100vh;
  color: #ffffff;
}

.visit__hours {
  background-image: url("../../public/benjamin-zanatta-qk1hk6R9rIQ-unsplash.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

.visit__location,
.visit__hours {
  flex: 1;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 1px;
  border-radius: 10px;
}
.visit__location {
  background-image: url("../../public/mihai-moisa-Djtc1T38-GY-unsplash.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

.frozen {
  width: 100vw;
  height: 100vh;
  background-image: url("../../public/pizza-rose.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  margin-top: 0.25rem;
  padding: 2rem;
  border-radius: 10px;
}

@media (max-width: 768px) {
  body, html {
    margin: 0;
    padding: 0;
  }

  html {
    overflow-x: hidden; /* Prevent left/right scrolling */
  }

  .about {
    background-color: #ffffff;
  }
  .about__container {
    flex-direction: column;
    width: 100vw;
    padding: 5rem;
  }
  .about__li {
    margin: 1rem;
  }

  .history__container {
    background-image: url("../../public/fineas-anton-kC1-9Snr9hI-unsplash.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    position: relative;
  }

  .history__content {
    position: relative;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.17);
    color: #fff;
    padding: 20px;
  }

  .history__image {
    display: none;
  }

  .visit{
    width: 100vw;
    height: 100vh;
  }

  .visit__container {
    display: flex;
    flex-direction: column;
  }

  .visit__location, .visit__hours{
    width: 100%;
    height: 100vh;
  }

  .frozen{
    color: white;
  }

}

